[project]
name = "llm-code-reviewer"
version = "0.1.0"
description = "LLM-powered API to review Python/SQL code"
authors = [
    { name = "Andy Malovic", email = "malovicz@protonmail.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = "^3.10"
dependencies = [
    "fastapi >=0.115.12,<0.116.0",
    "openai >=1.86.0,<2.0.0",
    "uvicorn >=0.34.3,<0.35.0",
    "pydantic >=2.11.7,<3.0.0"
]
packages = [
    { include = "llm_code_reviewer" }
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
